[project]
name = "openet-core"
version = "0.2.0"
authors = [
  { name="Charles Morton", email="charles.morton@dri.edu" },
]
description = "OpenET Core Components"
readme = "README.rst"
requires-python = ">=3.8"
keywords = ["OpenET", "Earth Engine", "evapotranspiration"]
license = {file = "LICENSE.txt"}
# license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "earthengine-api>=0.1.364",
    "python-dateutil",
]

[project.urls]
"Homepage" = "https://github.com/Open-ET/openet-core"
#"Repository" = "https://github.com/Open-ET/openet-core.git"
#"Documentation" = "https://github.com/Open-ET/openet-core"
#"Bug Tracker" = "https://github.com/Open-ET/openet-core"
#"Changelog" = "https://github.com/Open-ET/openet-core"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = [
    "pytest",
]
